--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,22 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:esp12e]
 platform = espressif8266
 board = esp12e
 framework = arduino
-
 board_build.filesystem = littlefs
-
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder
-
 lib_deps = 
 	adafruit/Adafruit GFX Library@^1.12.4
 	adafruit/Adafruit SSD1306@^2.5.16
 	esp32async/ESPAsyncWebServer@^3.9.3
+	bblanchon/ArduinoJson@^7.4.2
